# photo-renamer

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: exif_extractor.rs  filename_extractor.rs  geocoding.rs  main.rs  renamer.rs
